@@ -1,0 +1,22 @@
+{
+  "replace": false,
+  "values": [
+  "yungscavebiomes:ancient_sandstone_stairs",
+  "yungscavebiomes:ancient_sandstone_slab",
+  "yungscavebiomes:ancient_sandstone_wall",
+  "yungscavebiomes:brittle_ancient_sandstone",
+  "yungscavebiomes:layered_ancient_sandstone",
+  "yungscavebiomes:cut_ancient_sandstone",
+  "yungscavebiomes:cut_ancient_sandstone_slab",
+  "yungscavebiomes:ancient_sand",
+  "yungscavebiomes:ancient_sandstone",
+  "yungscavebiomes:brittle_red_sandstone",
+  "yungscavebiomes:layered_red_sandstone",
+  "yungscavebiomes:layered_sandstone",
+  "yungscavebiomes:brittle_sandstone",
+  "yungscavebiomes:smooth_ancient_sandstone_slab",
+  "yungscavebiomes:smooth_ancient_sandstone_stairs",
+  "yungscavebiomes:smooth_ancient_sandstone", 
+  "yungscavebiomes:chiseled_ancient_sandstone"                
+  ]
+}
