@@ -1,1 +1,1 @@
-{"pack":{"description":"Custom Recipe for Kodoku","pack_format":8}}
+{"pack":{"description":"Custom Recipe for Kodoku","pack_format":15}}
